# mch2022-gas-sensor-app

./: .gitmodules  Makefile  README.md
main/: CMakeLists.txt  gas_sensor.c  main.c  screens.c
main/gui/: gui_text.c  gui_text.h
main/include/: gas_sensor.h  screens.h
main/screens/: live.c  live.h  settings_heat_setpoint.c  settings_heat_setpoint.h  settings_heat_wait.c  settings_heat_wait.h
